# cs629_spring24

./: .gitignore  README.md
homework1/: README.md
homework1/src/: CMakeLists.txt  main.cpp
homework2/: README.md
homework2/src/: CMakeLists.txt  README.md  main.cpp
homework3/: README.md
homework3/src/: CMakeLists.txt  README.md  main.cpp
homework3/src/renderer/: renderer.cpp  renderer.h  renderer_types.h
homework4/: README.md
homework4/data/: example4.scene
homework4/src/: CMakeLists.txt
homework4/src/vect/: vect.h
milestone1/: README.md
milestone1/scripts/: save_bezier.py  save_lights.py
milestone1/src/: CMakeLists.txt  main.cpp
